--- a/kam/index.html
+++ b/kam/index.html
@@ -28,7 +28,7 @@
                 <span class="h-s3"></span>
             </div>
             <div id="hamburger-menu">
-                <ul class="nav-list">
+                <ul class="hnav-list">
                     <li><a href="#">Repairs</a></li>
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Contact</a></li>
@@ -49,7 +49,8 @@
     </header>
     <main>
         <section id="main-img">
-            <div class="wecanhelp-img">
+            <div class="wecanhelp-img"></div>
+            <div class="wch mw">
                 <p class="title">WE CAN HELP!</p>
                 <p class="desc">Need help for repair, service or upgrading your software?</p>
                 <p class="desc">Check out our repair, service section or contact up now to schedule a servicing.</p>
@@ -61,7 +62,7 @@
                 <div class="info-img1">
                     <p class="title">SMARTPHONE AND TABLET REPAIRS</p>
                 </div>
-                <div class="info-text">
+                <div class="info-text mw">
                     <p>We don’t just fix laptop screens - we also repair <span class="normal-font">tablet computers</span> and <span class="normal-font">smartphone screens</span>. Our repair teams are trained in the repair of all popular marks and models, including: Apple, Samsung and Sony.</p>
                 </div>
             </div>
@@ -70,7 +71,7 @@
                 <div class="info-img2">
                     <p class="title">FRIENDLY LAPTOP TECHNICIANS</p>
                 </div>
-                <div class="info-text">
+                <div class="info-text mw">
                     <p>It doesn’t matter how much or how little you know. We’re friendly and approachable. Whatever your laptop problem, we’ve got the expertise to solve it and the attitude to do it right!</p>
                 </div>
             </div>
@@ -79,28 +80,64 @@
                 <div class="info-img3">
                     <p class="title">PERSONAL COMPUTERS</p>
                 </div>
-                <div class="info-text">
+                <div class="info-text mw">
                     <p>Our trained computer repair teams carry replacement hardware for most common desktop PC faults - meaning we can get you back on track again whatever the problem. If we can’t fix your hardware problem on the spot, we’ll order the part you need to solve it.</p>
                 </div>
             </div>
         </section>
 
-        <section id="about-us">
+        <section id="fut" class="mw">
+            <div class="title">FIND US THERE!</div>
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2480.890039078053!2d-0.19519468447845514!3d51.5519153152687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876107eb3f79fd5%3A0x6aabc6b9e76cdbb9!2sKam%20Computers%20%26%20Mobiles!5e0!3m2!1spl!2spl!4v1595262300853!5m2!1spl!2spl" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            </div>
+        </section>
+
+        <section id="about-us" class="mw">
             <div class="title">ABOUT US</div>
-            <p><span class="normal-font">KAM Computers &amp; Mobiles</span> offers a wide variety of comprehensive IT Services and benefits that are designed to cater to the specific needs of home and business computer users in the UK since 1997. We provide immediate IT Support, on site or remotely for North West London.</p>
+            <p><span class="medium-font">KAM Computers &amp; Mobiles</span> offers a wide variety of comprehensive IT Services and benefits that are designed to cater to the specific needs of home and business computer users in the UK since 1997. We provide immediate IT Support, on site or remotely for North West London.</p>
 
-            <p><span class="normal-font">KAM Computers &amp; Mobiles</span> focuses on repairs for individuals and corporate companies throughout the UK and Europe providing a cost effective and efficient repair service. All organisations have different needs with some companies having requirements for one or two repairs and others needing hundreds of devices to be repaired. KAM Computers &amp; Mobile IT Solutions is dedicated to providing the best customer service. Computers and mobiles repairs available to you. When your computer or Mobile needs repairing, you won’t have to worry for long! Our technicians are skilled in dealing with all top-line computers and mobiles whether you need home or small business repairs.</p>
+            <p><span class="medium-font">KAM Computers &amp; Mobiles</span> focuses on repairs for individuals and corporate companies throughout the UK and Europe providing a cost effective and efficient repair service. All organisations have different needs with some companies having requirements for one or two repairs and others needing hundreds of devices to be repaired. KAM Computers &amp; Mobile IT Solutions is dedicated to providing the best customer service. Computers and mobiles repairs available to you. When your computer or Mobile needs repairing, you won’t have to worry for long! Our technicians are skilled in dealing with all top-line computers and mobiles whether you need home or small business repairs.</p>
 
-            <p>Every day it seems like there are more and more viruses, spyware applications and software issues ready to attack your computer and render it useless. Hearing the technology news can be overwhelming! Our technicians are not only here to help you with computer repairs but they can also help you understand how best to protect your computer from problems like these. We have <span class="normal-font">qualified engineers, use original parts, have a quick turnaround time</span>.</p>
+            <p>Every day it seems like there are more and more viruses, spyware applications and software issues ready to attack your computer and render it useless. Hearing the technology news can be overwhelming! Our technicians are not only here to help you with computer repairs but they can also help you understand how best to protect your computer from problems like these. We have <span class="medium-font">qualified engineers, use original parts, have a quick turnaround time</span>.</p>
 
             <p>Our business has been established to offer fantastic customer service as well as high-quality computer repairs with quick turn-over. If you have any questions about your computer system or want to schedule an appointment, just give us a call! We’ll take care of your computer repair needs and make sure you know how to safeguard your computer from failing again.</p>
         </section>
 
-        <section id="fut">
-            <div class="title">FIND US THERE!</div>
-            <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2480.890039078053!2d-0.19519468447845514!3d51.5519153152687!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4876107eb3f79fd5%3A0x6aabc6b9e76cdbb9!2sKam%20Computers%20%26%20Mobiles!5e0!3m2!1spl!2spl!4v1595262300853!5m2!1spl!2spl" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-            </div>
+        <section id="contact" class="mw">
+           <p class="title">CONTACT</p>
+            <div class="medium-font">WEST HAMPSTEAD BRANCH</div>
+            <p>sad</p>
+            <p>sad</p>
+            <p>sad</p>
+            <p>sad</p>
+            <br>
+            <p><span class="medium-font">TEL:</span> +44 (020) (8275 0704)</p>
+            <br>
+            <p><span class="medium-font">E-MAIL:</span> barnet@KamComputersAndMobiles.com</p>
+        </section>
+
+        <section id="comments" class="mw">
+            <p class="cmt title">Leave a message!</p>
+            <div id="wpac-comment"></div>
+            <script type="text/javascript">
+                wpac_init = window.wpac_init || [];
+                wpac_init.push({
+                    widget: 'Comment',
+                    id: 26355
+                });
+                (function() {
+                    if ('WIDGETPACK_LOADED' in window) return;
+                    WIDGETPACK_LOADED = true;
+                    var mc = document.createElement('script');
+                    mc.type = 'text/javascript';
+                    mc.async = true;
+                    mc.src = 'https://embed.widgetpack.com/widget.js';
+                    var s = document.getElementsByTagName('script')[0];
+                    s.parentNode.insertBefore(mc, s.nextSibling);
+                })();
+            </script>
+            <a href="https://widgetpack.com" class="wpac-cr">Comments System WIDGET PACK</a>
         </section>
     </main>
 </body></html>
