--- a/szkola/szablon/index.html
+++ b/szkola/szablon/index.html
@@ -121,18 +121,9 @@
             </ul>
         </section>
         <section class="kolumny" id="kol2">
-            <h3>Opis</h3>
-            Jeżeli nie zostaną określone szerokości kolumn ani szerokości szablonu,
-            to szablon zajmie całe okno przeglądarki. Zmiana szerokości okna przeglądarki
-            spowoduje automatyczną modyfikację zawartości strony i jej dostosowanie do aktualnych rozmiarów okna.
-            Jeżeli w podanym wyżej kodzie umieścimy w kolumnie drugiej fragment tekstu, zaopeserujemy zachowanie się
-            zawartości strony przy zmianie szerokości okna przeglądarki.
-            Mało praktyczne jest projektowanie strony, która będzie się rozciągała do granic możliwości
-            monitora. Lepiej zaprojektować stronę tak, aby powyżej pewnej szerokości ekranu jej szerokość już się nie
-            zwiększyła, a poniżej pewnej szerokości okna przeglądarki nie zmniejszyła. Aby uzyskać taki efekt, należy zdefiniować
-            minimalną i maksymalną szerokość bloku zewnętrznego (w powyższym przykładzie identyfikator ramka).
+            <img src="img/tokio.gif" alt="wakacje w tokio">
         </section>
-        <footer id="stopka">Pracę wykonał Sebastian Haber</footer>
+        <footer id="stopka">Pracę wykonał Sebastian Haber | <a href="./index.html">Strona główna</a></footer>
     </div>
 </body>
 
