--- a/szkola/szablon/index.html
+++ b/szkola/szablon/index.html
@@ -123,7 +123,7 @@
         <section class="kolumny" id="kol2">
             <img src="img/tokio.gif" alt="wakacje w tokio">
         </section>
-        <footer id="stopka">Pracę wykonał Sebastian Haber | <a href="./index.html">Strona główna</a></footer>
+        <footer id="stopka">Pracę wykonał Sebastian Haber</footer>
     </div>
 </body>
 
